# Tailor-hustle

./: .gitignore  Dockerfile  README.md  Run_Project_Commands.txt  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  requirements1.txt
.github/workflows/: django.yml
tailorhustle/: Procfile  db.sqlite3  manage.py
tailorhustle/api/: serializer.py  urls.py  views.py
tailorhustle/authentication/: forms.py  urls.py  views.py
tailorhustle/campaign/: forms.py  models.py  urls.py  views.py
tailorhustle/campaign/migrations/: 0001_initial.py
tailorhustle/main/: admin.py  forms.py  models.py  urls.py  views.py
tailorhustle/main/migrations/: 0001_initial.py  0002_alter_post_pic.py  0003_auto_20220528_1521.py  0004_alter_post_post_type.py  0005_alter_post_post_type.py  0006_postviews.py  0007_alter_postviews_count.py  0008_alter_postviews_count.py  0009_postviews_user.py  0010_alter_post_date_posted.py  0011_alter_post_date_posted.py  0012_auto_20220816_1913.py  0013_alter_post_date_posted.py  0014_post_price.py
tailorhustle/main/templates/: 404.html  505.html  add_listing.html  base.html  base2.html  feed.html  home.html  listing.html  login_registration_form.html
tailorhustle/static/css/: base.css  dashboard.css  index.css  login_registration_form.css
tailorhustle/static/js/: app.js  dashboard.js  manifest.json  serviceworker.js
tailorhustle/tailorhustle/: asgi.py  settings.py  urls.py  wsgi.py
tailorhustle/templates/components/: navbar.html  (+2 more)
tailorhustle/user/: admin.py  backend.py  forms.py  models.py  signals.py  urls.py  views.py
(+48 files in other folders)
